--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
 #exemple1 {
   color: rgb(255, 0, 0);
-background-color: aqua;}
+background-color: aqua; 
+width: 200px;
+/* height: 100px;  */
+border: 5px solid rgb(0, 255, 13);
+border-radius: 20px ;
+padding: 20px;
+margin: 40px;
+}
+#exemple2 {
+  color: black;
+  background-color: blanchedalmond;
+  width: 200px;
+/* height: 100px;  */
+border: 5px solid rgb(0, 255, 13);
+border-radius: 20px ;
+padding: 20px;
+margin: 50px;
+}
+#exemple3 {
+  color: green;
+  background-color: pink;
+  width: 200px;
+/* height: 100px;  */
+border: 5px solid rgb(0, 255, 13);
+border-radius: 20px ;
+padding: 20px;
+margin: 70px;
+}
+#exemple4 {
+  color: aqua;
+  background-color: black;
+  width: 200px;
+/* height: 100px;  */
+border: 5px solid rgb(0, 255, 13);
+border-radius: 50px ;
+padding: 80px;
+margin: 80px;
+}
