--- a/style.css
+++ b/style.css
@@ -1,40 +1,86 @@
 #exemple1 {
   color: rgb(255, 0, 0);
-background-color: aqua; 
-width: 200px;
-/* height: 100px;  */
-border: 5px solid rgb(0, 255, 13);
-border-radius: 20px ;
-padding: 20px;
-margin: 40px;
+  background-color: aqua;
+  width: 200px;
+  /* height: 100px;  */
+  border: 5px solid rgb(0, 255, 13);
+  border-radius: 20px;
+  padding: 20px;
+  margin: 40px;
 }
 #exemple2 {
   color: black;
   background-color: blanchedalmond;
   width: 200px;
-/* height: 100px;  */
-border: 5px solid rgb(0, 255, 13);
-border-radius: 20px ;
-padding: 20px;
-margin: 50px;
+  /* height: 100px;  */
+  border: 5px solid rgb(0, 255, 13);
+  border-radius: 20px;
+  padding: 20px;
+  margin: 50px;
 }
 #exemple3 {
   color: green;
   background-color: pink;
   width: 200px;
-/* height: 100px;  */
-border: 5px solid rgb(0, 255, 13);
-border-radius: 20px ;
-padding: 20px;
-margin: 70px;
+  /* height: 100px;  */
+  border: 5px solid rgb(0, 255, 13);
+  border-radius: 20px;
+  padding: 20px;
+  margin: 70px;
 }
 #exemple4 {
   color: aqua;
   background-color: black;
   width: 200px;
-/* height: 100px;  */
-border: 5px solid rgb(0, 255, 13);
-border-radius: 50px ;
-padding: 80px;
-margin: 80px;
+  /* height: 100px;  */
+  border: 5px solid rgb(0, 255, 13);
+  border-radius: 50px;
+  padding: 80px;
+  margin: 80px;
 }
+
+#karakol {
+  color: brown;
+background-color: chartreuse;
+width: 200px;
+/* height: 100px;  */
+border: 1px solid rgb(73, 149, 96);
+border-radius: 100px;
+padding: 30px;
+margin: 1px;}
+#karakol1 {
+  color: brown;
+background-color: chartreuse;
+width: 150px;
+/* height: 100px;  */
+border: 3px solid rgb(238, 255, 0);
+border-radius: 10px;
+padding: 30px;
+margin: 40px;}
+#karakol2 {
+  color: brown;
+background-color: rgb(0, 255, 221);
+width: 200px;
+/* height: 50px;  */
+border: 1px solid rgb(255, 0, 0);
+border-radius: 100px;
+padding: 30px;
+margin: 1px;}
+#karakol3 {
+  color: brown;
+background-color: rgb(0, 26, 255);
+width: 200px;
+/* height: 100px;  */
+border: 2px solid rgb(0, 255, 76);
+border-radius: 71px;
+padding: 13px;
+margin: 22px;}
+#ihate {
+  color: brown;
+background-color: chartreuse;
+width: 200px;
+/* height: 100px;  */
+border: 5px solid rgb(255, 0, 0);
+border-radius: 17px;
+padding: 70px;
+margin: 50px;}
